chore: Changed array to List method